package com.liyi.design.pattern.behavior.visitor;

public abstract class Comment {

    abstract void getResultMan(Person person);
    abstract void getResultWoman(Person person);
}
