package com.liyi.design.pattern.behavior.visitor;

public abstract class Person {

    abstract void accept(Comment comment);
}
